// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action generators signup matches snapshot 1`] = `
Object {
  "payload": Object {
    "api": Object {
      "method": "post",
      "params": Object {
        "email": "b",
        "email_validated": true,
        "login": true,
        "name": "a",
        "password": "c",
      },
      "path": "/noo/user",
    },
  },
  "type": "Signup/SIGNUP",
}
`;

exports[`action generators updateLocalUserSettings matches snapshot 1`] = `
Object {
  "payload": Object {
    "email": "b",
    "name": "a",
    "password": "c",
  },
  "type": "Signup/UPDATE_LOCAL_USER_SETTINGS",
}
`;
